Commit 0.2 changed the methods of process Extremes into 1 single method