@@ -15,9 +15,17 @@ public class Main {
         String[] arrayOfStrings = {"rosso", "verde", "blu", "viola", "giallo", "grigio"};
         Double[] arrayOfDouble = {14.5, 5.5, 23.5, 89.5, 4.5, 50.5};
 
-        System.out.println(SortMethod.sortByExtremes(Arrays.asList(arrayOfNumbers)));
+        List<Integer> integers = SortMethod.processExtremesSort(List.of(arrayOfNumbers));
+        List<String> strings = SortMethod.processExtremesSort(List.of(arrayOfStrings));
+        List<Double> doubles = SortMethod.processExtremesSort(List.of(arrayOfDouble));
+
+        System.out.println("Sorted Integers: " + integers);
+        System.out.println("Sorted Strings: " + strings);
+        System.out.println("Sorted Doubles: " + doubles);
+
+        /*System.out.println(SortMethod.sortByExtremes(Arrays.asList(arrayOfNumbers)));
         System.out.println(SortMethod.sortByExtremes(Arrays.asList(arrayOfStrings)));
-        System.out.println(SortMethod.sortByExtremes(Arrays.asList(arrayOfDouble)));
+        System.out.println(SortMethod.sortByExtremes(Arrays.asList(arrayOfDouble)));*/
 
     }
 }
